Fixed alignment issue (for care)

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -257,9 +257,10 @@ table.hospital-feature-props {
 }
 .legend-circle {
   display: inline-block;
-  width: 17px;
-  height: 17px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
+  margin-top: 4px;
   margin-left: 3px;
   margin-right: 10px;
   vertical-align: middle;
@@ -301,6 +302,11 @@ table.hospital-feature-props {
   background-color: purple;
 }
 
+.legend-circle-item {
+  transform: translate(30px, -20px); 
+  height: 4px;
+}
+
 .bottom25 {
   position: absolute;
   bottom: 25vh;
@@ -325,8 +331,10 @@ ul.list-inline > li.logo {
 
 li.logo {
   /* width: 10%; */
-  text-align: center;
-  margin: 50px;
+  /* text-align: center; */
+  margin-top: 40px;
+  padding: 10px;
+  /* margin: 20px; */
   vertical-align: top;
 }
 
